# selftech_website

./: .compose.yaml.swp  .gitignore  compose.yaml  docker-purge.sh  selftech_website.service
backend/: Dockerfile  docker_build.sh  docker_entry.sh  requirements.txt  server.py
compressor/: Cargo.toml  Dockerfile  docker_build.sh  docker_entry.sh
compressor/src/: main.rs
frontend/: .eslintrc.cjs  .gitignore  Dockerfile  docker_build.sh  docker_entry.sh  docker_entry_build.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  index.tsx  models.tsx
frontend/src/components/: Footer.tsx  Gallery.tsx  Header.tsx  HeaderThin.tsx  Home.tsx  Thumbnail.tsx  Tile.tsx
nginx/conf.d/: .default.conf.swp  default.conf
